# tareaCorta2

./: .gitignore  Agenda.cpp  Agenda.h  CMakeLists.txt  LineaDeProceso.cpp  LineaDeProceso.h  List.cpp  List.h  Node.cpp  Node.h  Proceso.cpp  Proceso.h  README.md  main.cpp
